<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.addodevelop.exclusivenews.news_detail.NewsDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_height="match_parent" >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:fitsSystemWindows="true"
            android:layout_height="wrap_content" >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:fitsSystemWindows="true"
                android:backgroundTint="@color/white"
                app:contentScrim="?attr/colorPrimary"
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                android:layout_height="250dp" >

                <ImageView
                    android:id="@+id/newsImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:contentDescription="@string/news_image"
                    android:scaleType="centerCrop"
                    android:transitionName="big_image"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/authorText"
                    android:maxLines="1"
                    android:maxLength="25"
                    app:setNewsAuthor="@{viewModel.newsItem}"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/text_blur_bg"
                    android:fontFamily="@font/space_mono"
                    android:padding="8dp"
                    app:layout_collapseMode="parallax"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="@string/dummy_text" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:backgroundTint="@android:color/transparent"
                    android:id="@+id/appBar"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/newsTitle"
                    app:setNewsTitle="@{viewModel.newsItem}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/space_mono"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/top_stories" />

                <TextView
                    android:id="@+id/newsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setNewsContent="@{viewModel.newsItem}"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newsTitle"
                    tools:text="@string/dummy_text" />

                <Button
                    android:id="@+id/viewArticleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/amber"
                    android:text="@string/view_article"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newsContent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.saveNewsItem()}"
            android:baselineAlignBottom="false"
            android:layout_marginEnd="16dp"
            app:fabSize="normal"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="end|bottom"
            android:contentDescription="@string/save_icon"
            app:srcCompat="@drawable/ic_download" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>